# Rubik-Cube-Solver

./: CMakeLists.txt  GameEngine.cpp  GameEngine.h  RubikCube.cpp  RubikCube.h  RubikCubeSolver.cpp  RubikCubeSolver.h  main.cpp
lib/Camera/: Camera.cpp  Camera.h
lib/MAT-Functions/: Mat.cpp  Mat.h
